Agregado spring security, change test, app properties